--- a/config.toml
+++ b/config.toml
@@ -192,7 +192,7 @@ creating, updating, and using RRDs (Round Robin Databases).
         position = "Student Technology Fellow"
         dates = "08.2013 - 05.2016"
         company = "Classroom Technology Services at SDSU"
-        details = """
+        _details = """
 - Fixed issues with Windows computers related to networking or hardware.
 - Installed smartboards, projectors, computers, audio systems and teaching stations.
         """
@@ -201,7 +201,7 @@ creating, updating, and using RRDs (Round Robin Databases).
         position = "Research Assistant"
         dates = "03.2013 - 05.2016"
         company = "EECS Department at SDSU"
-        details = """
+        _details = """
 - First undergraduate authorized to use the Scanning Electron Microscope.
 - Built and helped design a vacuum sputtering deposition system.
 - Installed many complex systems: heater with feedback control, gas flow
@@ -213,7 +213,7 @@ sources.
         position = "Software Developer Resident"
         dates = "06.2015 - 12.2015"
         company = "Subcontractor for Earth Resources Observation Systems"
-        details = """
+        _details = """
 - Wrote python code utilized in a production system used by scientists
 worldwide.
 - Member of a small team using agile development methods.
@@ -225,7 +225,7 @@ worldwide.
         position = "Sputtering System Lab Technician"
         dates = "09.2014 - 02.2015"
         company = "NASCENTechnology"
-        details = """
+        _details = """
 - Operated Ion Beam Assisted Deposition System to produce Flyback transformers.
 - Repaired or installed components on the sputtering system.
         """
