--- a/config.toml
+++ b/config.toml
@@ -24,7 +24,8 @@ disable404 = true
     # are available. Also the source LESS files are included so
     # it’s quick and easy to change the styling and colour scheme.
 
-    styles = "styles.css"
+    # styles = "styles.css"
+    styles = "styles-1-compact.css"
 
 # Sidebar sections
 
