--- a/config.toml
+++ b/config.toml
@@ -10,6 +10,10 @@ googleAnalytics = "UA-115633517-2"
 disableRSS = true
 disableSitemap = false
 disable404 = true
+disableKinds = [
+    "taxonomy",
+    "taxonomyTerm"
+]
 
 [params]
 
