--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,14 @@
 # https://github.com/jojomi/docker-hugo
 
 hugo:
-  image: jojomi/hugo:0.49
+  image: jojomi/hugo:0.57.2
   volumes:
     - ./:/src
     - ./public:/output
   environment:
     - HUGO_BASEURL=0.0.0.0
     - HUGO_WATCH=true
-    # - HUGO_THEME
+    - HUGO_THEME="hugo-orbit-theme" # This was required?
     # - HUGO_REFRESH_TIME=3600
     # - HUGO_DESTINATION="/output"
   restart: always
