markdown: Improve my 'markdown' format type.

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -59,7 +59,7 @@
         class = "twitter"
         icon = "fa-twitter"
         url = "https://twitter.com/NGenetzky"
-        title = "@NGenetzky"
+        title = "twitter.com/ngenetzky"
 
     # Education section
     [education]
