--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -198,47 +198,47 @@ creating, updating, and using RRDs (Round Robin Databases).
 - Used Test Driven Development to implement library, used CxxTest Framework.
         """
 
-        [[jobs.list]]
-        position = "Student Technology Fellow"
-        dates = "08.2013 - 05.2016"
-        company = "Classroom Technology Services at SDSU"
-        _details = """
-- Fixed issues with Windows computers related to networking or hardware.
-- Installed smartboards, projectors, computers, audio systems and teaching stations.
-        """
-
-        [[jobs.list]]
-        position = "Research Assistant"
-        dates = "03.2013 - 05.2016"
-        company = "EECS Department at SDSU"
-        _details = """
-- First undergraduate authorized to use the Scanning Electron Microscope.
-- Built and helped design a vacuum sputtering deposition system.
-- Installed many complex systems: heater with feedback control, gas flow
-control, vacuum gauges, rough pump, turbo pump, and magnetron sputtering
-sources.
-        """
-
-        [[jobs.list]]
-        position = "Software Developer Resident"
-        dates = "06.2015 - 12.2015"
-        company = "Subcontractor for Earth Resources Observation Systems"
-        _details = """
-- Wrote python code utilized in a production system used by scientists
-worldwide.
-- Member of a small team using agile development methods.
-- Researched upcoming technologies and techniques: Hadoop, Docker, map reduce,
-  Microservices, and distributed processing systems.
-        """
-
-        [[jobs.list]]
-        position = "Sputtering System Lab Technician"
-        dates = "09.2014 - 02.2015"
-        company = "NASCENTechnology"
-        _details = """
-- Operated Ion Beam Assisted Deposition System to produce Flyback transformers.
-- Repaired or installed components on the sputtering system.
-        """
+#        [[jobs.list]]
+#        position = "Student Technology Fellow"
+#        dates = "08.2013 - 05.2016"
+#        company = "Classroom Technology Services at SDSU"
+#        _details = """
+#- Fixed issues with Windows computers related to networking or hardware.
+#- Installed smartboards, projectors, computers, audio systems and teaching stations.
+#        """
+#
+#        [[jobs.list]]
+#        position = "Research Assistant"
+#        dates = "03.2013 - 05.2016"
+#        company = "EECS Department at SDSU"
+#        _details = """
+#- First undergraduate authorized to use the Scanning Electron Microscope.
+#- Built and helped design a vacuum sputtering deposition system.
+#- Installed many complex systems: heater with feedback control, gas flow
+#control, vacuum gauges, rough pump, turbo pump, and magnetron sputtering
+#sources.
+#        """
+#
+#        [[jobs.list]]
+#        position = "Software Developer Resident"
+#        dates = "06.2015 - 12.2015"
+#        company = "Subcontractor for Earth Resources Observation Systems"
+#        _details = """
+#- Wrote python code utilized in a production system used by scientists
+#worldwide.
+#- Member of a small team using agile development methods.
+#- Researched upcoming technologies and techniques: Hadoop, Docker, map reduce,
+#  Microservices, and distributed processing systems.
+#        """
+#
+#        [[jobs.list]]
+#        position = "Sputtering System Lab Technician"
+#        dates = "09.2014 - 02.2015"
+#        company = "NASCENTechnology"
+#        _details = """
+#- Operated Ion Beam Assisted Deposition System to produce Flyback transformers.
+#- Repaired or installed components on the sputtering system.
+#        """
 
     # Projects section
     [projects]
